@@ -26,6 +26,8 @@ void Hashbits::save(std::string outfilename)
     unsigned int save_ksize = _ksize;
     unsigned char save_n_tables = _n_tables;
     unsigned long long save_tablesize;
+    unsigned long long save_n_unique_kmers = _n_unique_kmers;
+    unsigned long long save_occupied_bins = _occupied_bins;
 
     ofstream outfile(outfilename.c_str(), ios::binary);
 
@@ -38,6 +40,10 @@ void Hashbits::save(std::string outfilename)
 
     outfile.write((const char *) &save_ksize, sizeof(save_ksize));
     outfile.write((const char *) &save_n_tables, sizeof(save_n_tables));
+    outfile.write((const char *) &save_n_unique_kmers,
+                  sizeof(save_n_unique_kmers));
+    outfile.write((const char *) &save_occupied_bins,
+                  sizeof(save_occupied_bins));
 
     for (unsigned int i = 0; i < _n_tables; i++) {
         save_tablesize = _tablesizes[i];
@@ -91,6 +97,8 @@ void Hashbits::load(std::string infilename)
         unsigned int save_ksize = 0;
         unsigned char save_n_tables = 0;
         unsigned long long save_tablesize = 0;
+        unsigned long long save_n_unique_kmers = 0;
+        unsigned long long save_occupied_bins = 0;
         char signature[4];
         unsigned char version, ht_type;
 
@@ -120,9 +128,14 @@ void Hashbits::load(std::string infilename)
 
         infile.read((char *) &save_ksize, sizeof(save_ksize));
         infile.read((char *) &save_n_tables, sizeof(save_n_tables));
+        infile.read((char *) &save_n_unique_kmers,
+                    sizeof(save_n_unique_kmers));
+        infile.read((char *) &save_occupied_bins, sizeof(save_occupied_bins));
 
         _ksize = (WordLength) save_ksize;
         _n_tables = (unsigned int) save_n_tables;
+        _n_unique_kmers = save_n_unique_kmers;
+        _occupied_bins = save_occupied_bins;
         _init_bitstuff();
 
         _counts = new Byte*[_n_tables];
