@@ -54,7 +54,7 @@ private:\
 #   define CIRCUM_MAX_VOL 200	// @CTB remove
 
 #   define SAVED_SIGNATURE "OXLI"
-#   define SAVED_FORMAT_VERSION 4
+#   define SAVED_FORMAT_VERSION 5
 #   define SAVED_COUNTING_HT 1
 #   define SAVED_HASHBITS 2
 #   define SAVED_TAGS 3
